# decklink_ndi

./: .gitmodules  CMakeLists.txt  README  main.cpp
.github/workflows/: cmake.yml
decklink/: ReadMe.rtf
decklink/Win/DirectShow/: DeckLink DirectShow SDK.chm
decklink/Win/DirectShow/include/: KsDeckLink.idl  KsDeckLinkMediaTypes.h
decklink/Win/include/: DeckLinkAPI.idl
